--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Rajdhani", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -50,5 +48,36 @@ code {
 }
 
 .shadow {
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.single-head {
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+.title {
+  font-size: 1.4em;
+  margin-top: 0.4em;
+}
+
+.project-status {
+  font-size: 1em;
+}
+
+@media screen and (max-width: 360px) {
+  .single-head {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  .title {
+    font-size: 0.8em;
+  }
+}
+
+.lead {
+  color: green;
 }
